Under Construction Page
Under Construction page and fuckaround page added

--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>
-      Yeehaw
-    </h1>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Coming Soon!</title>
+  <link rel="stylesheet" href="https://fonts.google.com/specimen/Saira#standard-styles">
+  <style>
+    body {
+      background-color: #000000;
+      font-family: "Saira", sans-serif;
+    }
+
+    h1 {
+      color: #93FF50;
+    }
+
+    p {
+      color: #ffffff;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>
+    Your Regularly Scheduled Content Will Be Resuming Shortly.
+  </h1>
+  <p>
+    Website builders just haven’t been doing it for me lately.
+  </p>
+  <p>
+    So I’m finally learning how to code.
+  </p>
+  <p>
+    Stay tuned.
+  </p>
+</body>
+
 </html>
