--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <title>Coming Soon!</title>
   <link rel="stylesheet" href="https://fonts.google.com/specimen/Saira#standard-styles">
