--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       color: #ffffff;
     }
   </style>
+  <link href="https://fonts.googleapis.com/css?family=Saira:500,800" rel="stylesheet">
 </head>
 
 <body>
