--- a/index.html
+++ b/index.html
@@ -5,19 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <title>Coming Soon!</title>
-  <link rel="stylesheet" href="https://fonts.google.com/specimen/Saira#standard-styles">
   <style>
     body {
       background-color: #000000;
       font-family: "Saira", sans-serif;
+      padding: 5% 50px;
     }
 
     h1 {
       color: #93FF50;
+      font-size: 72px;
     }
 
     p {
       color: #ffffff;
+      font-size: 32px;
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 40px;
+      }
+
+      p {
+        font-size: 20px;
+      }
     }
   </style>
   <link href="https://fonts.googleapis.com/css?family=Saira:500,800" rel="stylesheet">
