--- a/index.html
+++ b/index.html
@@ -2,52 +2,87 @@
 <html lang="en" dir="ltr">
 
 <head>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <meta charset="utf-8">
-  <title>Coming Soon!</title>
-  <style>
-    body {
-      background-color: #000000;
-      font-family: "Saira", sans-serif;
-      padding: 5% 50px;
-    }
 
-    h1 {
-      color: #93FF50;
-      font-size: 72px;
-    }
+  <!-- CSS only -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+    crossorigin="anonymous">
 
-    p {
-      color: #ffffff;
-      font-size: 32px;
-    }
+  <!-- JavaScript Bundle with Popper -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    crossorigin="anonymous"></script>
 
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 40px;
-      }
+  <link rel="stylesheet" href="https://use.typekit.net/nhd0gnx.css">
 
-      p {
-        font-size: 20px;
-      }
-    }
-  </style>
-  <link href="https://fonts.googleapis.com/css?family=Saira:500,800" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=poppins:300,400,500"
+    rel="stylesheet">
+
+  <link href="style.css" rel="stylesheet">
+
+  <title>Work</title>
+
 </head>
 
-<body>
-  <h1>
-    Your Regularly Scheduled Content Will Be Resuming Shortly.
-  </h1>
-  <p>
-    Website builders just haven’t been doing it for me lately.
-  </p>
-  <p>
-    So I’m finally learning how to code.
-  </p>
-  <p>
-    Stay tuned.
-  </p>
+
+<body class="bg-dark">
+
+  <div class="mx-auto px-3" style="max-width: 1000px;">
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark pt-4 sticky-top">
+      <a class="navbar-brand" href="index.html">
+        <img src="Images/website_2021_logo.png" alt="Sam Rogers" height="40">
+      </a>
+
+      <div style="flex:1;">
+      </div>
+
+      <div class="" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item active">
+            <a class="nav-link menu-link" href="index.html">Work
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="row">
+
+      <div class="col-12 col-md">
+        <a href="loop.html" class="text-center" style="text-decoration: none">
+          <img class="img-fluid pt-5 pb-4" src="Images/loop_homePage.png" alt="">
+          <h2 class="header-2">
+            Loop
+          </h2>
+        </a>
+      </div>
+
+      <div class="col-1">
+      </div>
+
+      <div class="col-12 col-md">
+        <a href="dew.html" class="text-center" style="text-decoration: none">
+          <img class="img-fluid pt-5 pb-4" src="Images/dew_homePage.png" alt="">
+          <h2 class="header-2">
+            Dew
+          </h2>
+        </a>
+      </div>
+
+    </div>
+
+    <h1 class="header-3 text-center my-5 py-5">
+      More projects coming soon to a website near you...
+    </h1>
+
 </body>
 
 </html>
