added cpr and 36mot
added pages for racing and 36mot, tweaked the home page and nav a lil too

--- a/index.html
+++ b/index.html
@@ -34,43 +34,63 @@
 
 <body class="bg-dark">
 
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark pt-4 sticky-top mx-auto px-3"
+    style="max-width: 1000px;">
+    <a class="navbar-brand" href="index.html">
+      <img src="Images/website_2021_logo.png" alt="Sam Rogers" height="40">
+    </a>
+
+    <div style="flex:1;">
+    </div>
+
+    <div class="" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item active">
+          <a class="nav-link menu-link" href="index.html">Work
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
   <div class="mx-auto px-3" style="max-width: 1000px;">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark pt-4 sticky-top">
-      <a class="navbar-brand" href="index.html">
-        <img src="Images/website_2021_logo.png" alt="Sam Rogers" height="40">
-      </a>
+    <div class="row py-5">
 
-      <div style="flex:1;">
-      </div>
-
-      <div class="" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item active">
-            <a class="nav-link menu-link" href="index.html">Work
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <div class="row">
-
-      <div class="col-12 col-md">
+      <div class="col-12 col-md py-5">
         <a href="loop.html" class="text-center" style="text-decoration: none">
-          <img class="img-fluid pt-5 pb-4" src="Images/loop_homePage.png" alt="">
+          <img class="mx-auto d-block img-solid pb-3" src="Images/loop_homePage.png"
+            alt="">
           <h2 class="header-2">
             Loop
           </h2>
         </a>
       </div>
 
-      <div class="col-1">
+      <div class="col-12 col-md py-5">
+        <a href="36minutesoftype.html" class="text-center" style="text-decoration: none">
+          <img class="mx-auto d-block img-solid pb-3"
+            src="Images/36MinutesOfType_igArtboard-1.png" alt="">
+          <h2 class="header-2">
+            36 Minutes of Type
+          </h2>
+        </a>
       </div>
 
-      <div class="col-12 col-md">
+      <div class="col-12 col-md py-5">
+        <a href="calpolyracing.html" class="text-center" style="text-decoration: none">
+          <img class="mx-auto d-block img-solid pb-3" src="Images/racing_homePage.png"
+            alt="">
+          <h2 class="header-2">
+            Cal Poly Racing
+          </h2>
+        </a>
+      </div>
+
+      <div class="col-12 col-md py-5">
         <a href="dew.html" class="text-center" style="text-decoration: none">
-          <img class="img-fluid pt-5 pb-4" src="Images/dew_homePage.png" alt="">
+          <img class="mx-auto d-block img-solid pb-3" src="Images/dew_homePage.png"
+            alt="">
           <h2 class="header-2">
             Dew
           </h2>
@@ -78,6 +98,7 @@
       </div>
 
     </div>
+
 
     <h1 class="header-3 text-center my-5 py-5">
       More projects coming soon to a website near you...
