--- a/dew.html
+++ b/dew.html
@@ -33,25 +33,26 @@
 
 <body class="bg-dark">
 
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark pt-4 sticky-top mx-auto px-3"
+    style="max-width: 1000px;">
+    <a class="navbar-brand" href="index.html">
+      <img src="Images/website_2021_logo.png" alt="Sam Rogers" height="40">
+    </a>
+
+    <div style="flex:1;">
+    </div>
+
+    <div class="" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item active">
+          <a class="nav-link menu-link" href="index.html">Work
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
   <div class="mx-auto px-3" style="max-width: 1000px;">
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark pt-4 sticky-top">
-      <a class="navbar-brand" href="index.html">
-        <img src="Images/website_2021_logo.png" alt="Sam Rogers" height="40">
-      </a>
-
-      <div style="flex:1;">
-      </div>
-
-      <div class="" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item active">
-            <a class="nav-link menu-link" href="index.html">Work
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
 
     <img src="Images/dew_heroImage.png" class="img-fluid py-5"
       alt="Two business cards. The front of the card shows the Dew logo and the back of the card features a vine pattern along with the name, job, and email address of the restaurant owner and the website, phone number, and address of the restaurant.">
