--- a/loop.html
+++ b/loop.html
@@ -33,25 +33,26 @@
 
 <body class="bg-dark">
 
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark pt-4 sticky-top mx-auto px-3"
+    style="max-width: 1000px;">
+    <a class="navbar-brand" href="index.html">
+      <img src="Images/website_2021_logo.png" alt="Sam Rogers" height="40">
+    </a>
+
+    <div style="flex:1;">
+    </div>
+
+    <div class="" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item active">
+          <a class="nav-link menu-link" href="index.html">Work
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
   <div class="mx-auto px-3" style="max-width: 1000px;">
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark pt-4 sticky-top">
-      <a class="navbar-brand" href="index.html">
-        <img src="Images/website_2021_logo.png" alt="Sam Rogers" height="40">
-      </a>
-
-      <div style="flex:1;">
-      </div>
-
-      <div class="" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item active">
-            <a class="nav-link menu-link" href="index.html">Work
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
 
     <img src="Images/loop_heroImage.png" class="img-fluid py-5"
       alt="Five iPhone screens showing different pages of the Loop app: a list of daily tasks, an events page, a single task page, a user profile, and a community challenge page.">
@@ -239,7 +240,7 @@
     <div class="border-top py-5 mt-3" color="#ffffff">
       <div class="row">
         <div class="col text-center">
-          <a href="dew.html" class="btn btn-primary my-3">Next Project</a>
+          <a href="36minutesoftype.html" class="btn btn-primary my-3">Next Project</a>
         </div>
       </div>
     </div>
