--- a/36minutesoftype.html
+++ b/36minutesoftype.html
@@ -21,8 +21,7 @@
 
   <link rel="stylesheet" href="https://use.typekit.net/nhd0gnx.css">
 
-  <link href="https://fonts.googleapis.com/css?family=poppins:300,400,500"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=poppins:300,400" rel="stylesheet">
 
   <link href="style.css" rel="stylesheet">
 
