--- a/dew.html
+++ b/dew.html
@@ -21,8 +21,7 @@
 
   <link rel="stylesheet" href="https://use.typekit.net/nhd0gnx.css">
 
-  <link href="https://fonts.googleapis.com/css?family=poppins:300,400,500"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=poppins:300,400" rel="stylesheet">
 
   <link href="style.css" rel="stylesheet">
 
@@ -139,7 +138,7 @@
     <div class="border-top py-5 mt-3" color="#ffffff">
       <div class="row">
         <div class="col text-center">
-          <a href="loop.html" class="btn btn-primary my-3">Next Project</a>
+          <a href="xvela.html" class="btn btn-primary my-3">Next Project</a>
         </div>
       </div>
     </div>
