--- a/loop.html
+++ b/loop.html
@@ -21,8 +21,7 @@
 
   <link rel="stylesheet" href="https://use.typekit.net/nhd0gnx.css">
 
-  <link href="https://fonts.googleapis.com/css?family=poppins:300,400,500"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=poppins:300,400" rel="stylesheet">
 
   <link href="style.css" rel="stylesheet">
 
@@ -154,22 +153,22 @@
 
     <div class="row py-3">
 
-      <div class="col-12 col-sm-3">
-        <img src="Images/creativeJam_icons-02.png" class="img-fluid py-4"
+      <div class="col-6 col-sm-3">
+        <img src="Images/creativeJam_icons-02.png" class="img-fluid pt-4"
           alt="A cartoon illustration of a plant sprout surrounded by green, red, and yellow dots.">
       </div>
 
-      <div class="col-12 col-sm-3">
-        <img src="Images/creativeJam_icons-03.png" class="img-fluid py-4"
+      <div class="col-6 col-sm-3">
+        <img src="Images/creativeJam_icons-03.png" class="img-fluid pt-4"
           alt="A cartoon illustration of a milk jug and a glass of milk.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/creativeJam_icons-04.png" class="img-fluid py-4"
           alt="A cartoon illustration of a television with antennas and knobs.">
       </div>
 
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <img src="Images/creativeJam_icons-05.png" class="img-fluid py-4"
           alt="A cartoon illustration of three skyscraper buildings with clouds above them.">
       </div>
