--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
   <link rel="stylesheet" href="https://use.typekit.net/nhd0gnx.css">
 
-  <link href="https://fonts.googleapis.com/css?family=poppins:300,400,500"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=poppins:300,400" rel="stylesheet">
 
   <link href="style.css" rel="stylesheet">
 
@@ -97,12 +96,18 @@
         </a>
       </div>
 
+      <div class="col-12 col-md py-5">
+        <a href="xvela.html" class="text-center" style="text-decoration: none">
+          <img class="mx-auto d-block img-solid pb-3" src="Images/xvela_homePage.png"
+            alt="">
+          <h2 class="header-2">
+            XVELA Icon Library
+          </h2>
+        </a>
+      </div>
+
     </div>
 
-
-    <h1 class="header-3 text-center my-5 py-5">
-      More projects coming soon to a website near you...
-    </h1>
 
 </body>
 
