--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <link rel="stylesheet" href="https://use.typekit.net/nhd0gnx.css">
 
-  <link href="https://fonts.googleapis.com/css?family=poppins:300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400" rel="stylesheet">
 
   <link href="style.css" rel="stylesheet">
 
