--- a/calpolyracing.html
+++ b/calpolyracing.html
@@ -21,7 +21,8 @@
 
   <link rel="stylesheet" href="https://use.typekit.net/nhd0gnx.css">
 
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500"
+    rel="stylesheet">
 
   <link href="style.css" rel="stylesheet">
 
@@ -32,10 +33,14 @@
 
 <body class="bg-dark">
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-dark pt-4 sticky-top mx-auto px-3"
+  <nav class="navbar navbar-expand navbar-light bg-dark pt-4 sticky-top mx-auto px-3"
     style="max-width: 1000px;">
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand d-none d-sm-block" href="index.html">
       <img src="Images/website_2021_logo.png" alt="Sam Rogers" height="40">
+    </a>
+
+    <a class="navbar-brand d-sm-none" href="index.html">
+      <img src="Images/website_2021_logo_small.png" alt="S.R." height="40">
     </a>
 
     <div style="flex:1;">
@@ -43,8 +48,12 @@
 
     <div class="" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item active">
+        <li class="nav-item active px-5">
           <a class="nav-link menu-link" href="index.html">Work
+          </a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link menu-link" href="about.html">About
           </a>
         </li>
       </ul>
@@ -213,7 +222,7 @@
     <div class="border-top py-5 mt-3" color="#ffffff">
       <div class="row">
         <div class="col text-center">
-          <a href="dew.html" class="btn btn-primary my-3">Next Project</a>
+          <a href="36minutesoftype.html" class="btn btn-primary my-3">Next Project</a>
         </div>
       </div>
     </div>
