updated page titles
thats pretty much it

--- a/calpolyracing.html
+++ b/calpolyracing.html
@@ -26,7 +26,7 @@
 
   <link href="style.css" rel="stylesheet">
 
-  <title>Cal Poly Racing</title>
+  <title>Cal Poly Racing | Sam Rogers Design</title>
 
 </head>
 
