--- a/xvela.html
+++ b/xvela.html
@@ -26,7 +26,7 @@
 
   <link href="style.css" rel="stylesheet">
 
-  <title>XVELA Icon Library</title>
+  <title>XVELA Icon Library | Sam Rogers Design</title>
 
 </head>
 
