--- a/36minutesoftype.html
+++ b/36minutesoftype.html
@@ -26,7 +26,7 @@
 
   <link href="style.css" rel="stylesheet">
 
-  <title>Loop</title>
+  <title>36 Minutes of Type | Sam Rogers Design</title>
 
 </head>
 
