--- a/index.html
+++ b/index.html
@@ -86,21 +86,31 @@
       </div>
 
       <div class="col-12 col-sm-6 py-5">
-        <a href="calpolyracing.html" class="text-center" style="text-decoration: none">
-          <img class="mx-auto d-block img-solid pb-3" src="Images/racing_homePage.png"
+        <a href="lacroix.html" class="text-center" style="text-decoration: none">
+          <img class="mx-auto d-block img-solid pb-3" src="Images/lacroix_homePage.png"
             alt="">
           <h2 class="header-2">
-            Cal Poly Racing
+            LaCroix Rebrand
           </h2>
         </a>
       </div>
 
       <div class="col-12 col-sm-6 py-5">
-        <a href="36minutesoftype.html" class="text-center" style="text-decoration: none">
-          <img class="mx-auto d-block img-solid pb-3"
-            src="Images/36MinutesOfType_igArtboard-1.png" alt="">
+        <a href="dew.html" class="text-center" style="text-decoration: none">
+          <img class="mx-auto d-block img-solid pb-3" src="Images/dew_homePage.png"
+            alt="">
           <h2 class="header-2">
-            36 Minutes of Type
+            Dew
+          </h2>
+        </a>
+      </div>
+
+      <div class="col-12 col-sm-6 py-5">
+        <a href="calpolyracing.html" class="text-center" style="text-decoration: none">
+          <img class="mx-auto d-block img-solid pb-3" src="Images/racing_homePage.png"
+            alt="">
+          <h2 class="header-2">
+            Cal Poly Racing
           </h2>
         </a>
       </div>
@@ -116,11 +126,11 @@
       </div>
 
       <div class="col-12 col-sm-6 py-5">
-        <a href="dew.html" class="text-center" style="text-decoration: none">
-          <img class="mx-auto d-block img-solid pb-3" src="Images/dew_homePage.png"
-            alt="">
+        <a href="36minutesoftype.html" class="text-center" style="text-decoration: none">
+          <img class="mx-auto d-block img-solid pb-3"
+            src="Images/36MinutesOfType_igArtboard-1.png" alt="">
           <h2 class="header-2">
-            Dew
+            36 Minutes of Type
           </h2>
         </a>
       </div>
