--- a/loop.html
+++ b/loop.html
@@ -248,7 +248,7 @@
     <div class="border-top py-5 mt-3" color="#ffffff">
       <div class="row">
         <div class="col text-center">
-          <a href="calpolyracing.html" class="btn btn-primary my-3">Next Project</a>
+          <a href="lacroix.html" class="btn btn-primary my-3">Next Project</a>
         </div>
       </div>
     </div>
