--- a/36minutesoftype.html
+++ b/36minutesoftype.html
@@ -282,7 +282,7 @@
     <div class="border-top py-5 mt-3" color="#ffffff">
       <div class="row">
         <div class="col text-center">
-          <a href="xvela.html" class="btn btn-primary my-3">Next Project</a>
+          <a href="grove.html" class="btn btn-primary my-3">Next Project</a>
         </div>
       </div>
     </div>
