--- a/dew.html
+++ b/dew.html
@@ -147,7 +147,7 @@
     <div class="border-top py-5 mt-3" color="#ffffff">
       <div class="row">
         <div class="col text-center">
-          <a href="grove.html" class="btn btn-primary my-3">Next Project</a>
+          <a href="calpolyracing.html" class="btn btn-primary my-3">Next Project</a>
         </div>
       </div>
     </div>
