--- a/xvela.html
+++ b/xvela.html
@@ -214,7 +214,7 @@
     <div class="border-top py-5 mt-3" color="#ffffff">
       <div class="row">
         <div class="col text-center">
-          <a href="dew.html" class="btn btn-primary my-3">Next Project</a>
+          <a href="36minutesoftype.html" class="btn btn-primary my-3">Next Project</a>
         </div>
       </div>
     </div>
