--- a/about.html
+++ b/about.html
@@ -95,5 +95,17 @@
 
     </div>
 
+    <div class="border-top py-5 mt-3" color="#ffffff">
+      <div class="col text-center">
+        <h1 class="header-1 pb-3">
+          Like what you see?
+        </h1>
+        <h3 class="header-3 pb-3">
+          Maybe we should work together!
+        </h3>
+        <a href="mailto:srogersdesign27@gmail.com" class="btn btn-primary my-3">Email
+          Me</a>
+      </div>
+    </div>
 
 </body>
