--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="col-12 col-sm-6 py-5">
         <a href="grove.html" class="text-center" style="text-decoration: none">
           <img class="mx-auto d-block img-solid pb-3" src="Images/grove_homePage.png"
-            alt="">
+            alt="A computer showing the Grove home page of the website.">
           <h2 class="header-2">
             Grove
           </h2>
@@ -78,7 +78,7 @@
       <div class="col-12 col-sm-6 py-5">
         <a href="loop.html" class="text-center" style="text-decoration: none">
           <img class="mx-auto d-block img-solid pb-3" src="Images/loop_homePage.png"
-            alt="">
+            alt="Five iPhone screens showing different pages of the Loop app: a list of daily tasks, an events page, a single task page, a user profile, and a community challenge page.">
           <h2 class="header-2">
             Loop
           </h2>
@@ -88,7 +88,7 @@
       <div class="col-12 col-sm-6 py-5">
         <a href="lacroix.html" class="text-center" style="text-decoration: none">
           <img class="mx-auto d-block img-solid pb-3" src="Images/lacroix_homePage.png"
-            alt="">
+            alt="A rebranded carrying case of six bottles of LaCroix.">
           <h2 class="header-2">
             LaCroix Rebrand
           </h2>
@@ -98,7 +98,7 @@
       <div class="col-12 col-sm-6 py-5">
         <a href="dew.html" class="text-center" style="text-decoration: none">
           <img class="mx-auto d-block img-solid pb-3" src="Images/dew_homePage.png"
-            alt="">
+            alt="Two business cards. The front of the card shows the Dew logo and the back of the card features a vine pattern along with the name, job, and email address of the restaurant owner and the website, phone number, and address of the restaurant.">
           <h2 class="header-2">
             Dew
           </h2>
@@ -108,7 +108,7 @@
       <div class="col-12 col-sm-6 py-5">
         <a href="calpolyracing.html" class="text-center" style="text-decoration: none">
           <img class="mx-auto d-block img-solid pb-3" src="Images/racing_homePage.png"
-            alt="">
+            alt="A laptop screen displaying the the Formula SAE page of the Cal Poly Racing website.">
           <h2 class="header-2">
             Cal Poly Racing
           </h2>
@@ -118,7 +118,7 @@
       <div class="col-12 col-sm-6 py-5">
         <a href="xvela.html" class="text-center" style="text-decoration: none">
           <img class="mx-auto d-block img-solid pb-3" src="Images/xvela_homePage.png"
-            alt="">
+            alt="Four white icons (a ship's steering wheel, a globe with a GPS marker, binoculars, and a lightbulb) arranged in a two by two square with blue and orange as alternating background colors.">
           <h2 class="header-2">
             XVELA Icon Library
           </h2>
@@ -128,7 +128,8 @@
       <div class="col-12 col-sm-6 py-5">
         <a href="36minutesoftype.html" class="text-center" style="text-decoration: none">
           <img class="mx-auto d-block img-solid pb-3"
-            src="Images/36MinutesOfType_igArtboard-1.png" alt="">
+            src="Images/36MinutesOfType_igArtboard-1.png"
+            alt="Sketches of the letters A through I arranged in a 3 by 3 square.">
           <h2 class="header-2">
             36 Minutes of Type
           </h2>
@@ -137,6 +138,18 @@
 
     </div>
 
+    <div class="border-top py-5 mt-3" color="#ffffff">
+      <div class="col text-center">
+        <h1 class="header-1 pb-3">
+          Like what you see?
+        </h1>
+        <h3 class="header-3 pb-3">
+          Maybe we should work together!
+        </h3>
+        <a href="mailto:srogersdesign27@gmail.com" class="btn btn-primary my-3">Email
+          Me</a>
+      </div>
+    </div>
 
 </body>
 
