--- a/dew.html
+++ b/dew.html
@@ -144,11 +144,48 @@
     <img src="Images/dew_menuMockup.png" class="img-fluid py-5"
       alt="Three menus, one for breakfast, one for lunch and dinner, and a smaller dessert menu in the middle.">
 
+
     <div class="border-top py-5 mt-3" color="#ffffff">
+      <h2 class="header-2 text-center pb-3">
+        Looking for more?
+      </h2>
+
       <div class="row">
-        <div class="col text-center">
-          <a href="calpolyracing.html" class="btn btn-primary my-3">Next Project</a>
+
+        <div class="col-12 col-sm-3 mx-auto">
+          <a href="calpolyracing.html">
+            <img class="img-fluid" src="Images/racing_homePage.png"
+              alt="A laptop screen displaying the the Formula SAE page of the Cal Poly Racing website.">
+          </a>
         </div>
+
+        <div class="col-12 col-sm-3 mx-auto">
+          <a href="xvela.html">
+            <img class="img-fluid" src="Images/xvela_homePage.png"
+              alt="Four white icons (a ship's steering wheel, a globe with a GPS marker, binoculars, and a lightbulb) arranged in a two by two square with blue and orange as alternating background colors..">
+          </a>
+        </div>
+
+        <div class="col-12 col-sm-3 mx-auto">
+          <a href="36minutesoftype.html">
+            <img class="img-fluid" src="Images/36MinutesOfType_igArtboard-1.png"
+              alt="Sketches of the letters A through I arranged in a 3 by 3 square.">
+          </a>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="border-top py-5 mt-3" color="#ffffff">
+      <div class="col text-center">
+        <h1 class="header-1 pb-3">
+          Like what you see?
+        </h1>
+        <h3 class="header-3 pb-3">
+          Maybe we should work together!
+        </h3>
+        <a href="mailto:srogersdesign27@gmail.com" class="btn btn-primary my-3">Email
+          Me</a>
       </div>
     </div>
 
