updated about page
added resume and updated bio

--- a/about.html
+++ b/about.html
@@ -74,10 +74,9 @@
           I’m Sam and I'm a graphic designer.
         </h2>
         <p class="body-1">
-          I recently graduated from Cal Poly in San Luis Obispo and decided to stick
-          around on the central coast for a bit. So far, most of my experience is in
-          branding and UX/UI, but I'm always looking to add new skills and projects to my
-          repertoire.
+          I recently graduated from Cal Poly in San Luis Obispo and I'm looking to move to
+          the San Diego area. My focus is in branding, but I enjoy any project that that
+          has lots of pieces to fit together.
         </p>
         <p class="body-1">
           When I’m not at my computer, you'll most likely find me cooking, doing jigsaw
@@ -87,13 +86,171 @@
           If you want to get in touch, send me an email at <a class="link"
             href="mailto:srogersdesign27@gmail.com">srogersdesign27@gmail.com</a>
         </p>
+      </div>
+
+    </div>
+
+    <h2 class="header-2 py-4">
+      Check out my resume while you're here.
+    </h2>
+
+    <div class="row">
+
+      <div class="col-12 col-sm-5 py-3">
+        <h3 class="header-3 pb-3">
+          Education
+        </h3>
+        <h4 class="header-4 pb-2">
+          B.F.A in Art and Design, June 2020
+        </h4>
         <p class="body-1">
-          And check out my <a class="link" href="Images/resume_9.0.pdf">resume</a> while
-          you’re at it! ;)
+          Concentration in Graphic Design
+        </p>
+        <p class="body-1">
+          California Polytechnic State University, San Luis Obispo
+        </p>
+      </div>
+
+      <div class="col-2">
+      </div>
+
+      <div class="col-12 col-sm-5 py-3">
+        <h3 class="header-3 pb-3">
+          Honors and Awards
+        </h3>
+        <p class="body-1">
+          Magna Cum Laude
+        </p>
+        <p class="body-1">
+          Dean’s List Fall 2016—Spring 2020
+        </p>
+        <p class="body-1">
+          Adobe IBM iX Creative Jam 2019 Winner
         </p>
       </div>
 
     </div>
+
+    <div class="col-12 py-3">
+      <h3 class="header-3 pb-3">
+        Work Experience
+      </h3>
+    </div>
+
+    <div class="row">
+
+      <div class="col-12 col-md-5 py-3">
+
+        <h4 class="header-4 pb-2">
+          Co-Founder and CMO, Grove
+        </h4>
+        <p class="body-2">
+          February 2020—June 2021
+        </p>
+        <p class="body-1">
+          Created company branding. Designed and protoyped product user experience and
+          interface. Conducted user interviews. Worked in sprints with software
+          development teams to plan features. Developed and implemented a digital
+          marketing strategy.
+        </p>
+      </div>
+
+      <div class="col-2">
+      </div>
+
+      <div class="col-12 col-md-5 py-3">
+
+        <h4 class="header-4 pb-2">
+          Creative Director, Cal Poly Racing
+        </h4>
+        <p class="body-2">
+          February 2019—June 2020
+        </p>
+        <p class="body-1">
+          Led a creative team of 3–6 students. Recruited and trained new team members.
+          Managed and distributed projects to other team members. Oversaw team brand and
+          website development. Worked with engineering teams to plan and execute
+          collaborative projects.
+        </p>
+      </div>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-12 col-md-5 py-3">
+
+        <h4 class="header-4 pb-2">
+          Freelance Graphic Design Intern, Five Acres Agency
+        </h4>
+        <p class="body-2">
+          June 2019—October 2019
+        </p>
+        <p class="body-1">
+          Planned and executed a cross-platform social media marketing strategy. Created
+          and edited a variety of client work including publications, presentations,
+          social media content, and UI animations.
+        </p>
+      </div>
+
+      <div class="col-2">
+      </div>
+
+      <div class="col-12 col-md-5 py-3">
+
+        <h4 class="header-4 pb-2">
+          Graphic Design Intern, XVELA
+        </h4>
+        <p class="body-2">
+          June 2018—September 2018
+        </p>
+        <p class="body-1">
+          Designed a custom icon library for use in marketing collateral and website
+          design. Created graphics for social media accounts. Provided feedback on website
+          design. Attended and participated in weekly company and department meetings.
+        </p>
+      </div>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-12 col-md-5 py-3">
+
+        <h4 class="header-4 pb-2">
+          Graphic Design Lead, Cal Poly Racing
+        </h4>
+        <p class="body-2">
+          February 2018—February 2019
+        </p>
+        <p class="body-1">
+          Designed promotional materials and apparel. Created presentations necessary for
+          SAE competitions. Organized and led design meetings and workshops. Photographed
+          team events for social media.
+        </p>
+      </div>
+
+      <div class="col-2">
+      </div>
+
+      <div class="col-12 col-md-5 py-3">
+
+        <h4 class="header-4 pb-2">
+          Marketing Intern, Switchmate Home
+        </h4>
+        <p class="body-2">
+          August 2017—September 2017
+        </p>
+        <p class="body-1">
+          Conceptualized product and packaging designs. Created website concepts and web
+          content. Performed product tests. Assembled promotional material and packaging.
+        </p>
+      </div>
+
+    </div>
+
+    <a href="Images/resume_10.1.pdf" class="btn btn-primary mt-2 mb-5">Download My
+      Resume</a>
 
     <div class="border-top py-5 mt-3" color="#ffffff">
       <div class="col text-center">
