--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
         </h2>
         <p class="body-1">
           I recently graduated from Cal Poly in San Luis Obispo and I'm looking to move to
-          the San Diego area. My focus is in branding, but I enjoy any project that that
+          the San Diego area. My focus is in branding, but I enjoy any project that
           has lots of pieces to fit together.
         </p>
         <p class="body-1">
