added image to grove

--- a/grove.html
+++ b/grove.html
@@ -299,6 +299,13 @@
 
     </div>
 
+    <div class="row text-center">
+      <div class="col">
+        <img src="Images/grove_socialPost.png" class="img-fluid mx-auto py-4"
+          alt="Three iPhones showing Grove Instagram posts.">
+      </div>
+    </div>
+
 
     <div class="border-top py-5 mt-3" color="#ffffff">
       <h2 class="header-2 text-center pb-3">
