--- a/about.html
+++ b/about.html
@@ -19,8 +19,6 @@
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="https://use.typekit.net/nhd0gnx.css">
-
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500"
     rel="stylesheet">
 
@@ -36,11 +34,11 @@
   <nav class="navbar navbar-expand navbar-light bg-dark pt-4 sticky-top mx-auto px-3"
     style="max-width: 1000px;">
     <a class="navbar-brand d-none d-sm-block" href="index.html">
-      <img src="Images/website_2021_logo.png" alt="Sam Rogers" height="40">
+      <img src="Images/website_2021_logo_2.0.png" alt="Sam Rogers" height="40">
     </a>
 
     <a class="navbar-brand d-sm-none" href="index.html">
-      <img src="Images/website_2021_logo_small.png" alt="S.R." height="40">
+      <img src="Images/website_2021_logo_small_2.0.png" alt="S.R." height="40">
     </a>
 
     <div style="flex:1;">
@@ -65,13 +63,13 @@
     <div class="row">
 
       <div class="col-12 col-md-6 py-2">
-        <img src="Images/headshot.png" class="img-fluid align-self-center py-5"
+        <img src="Images/headshot.jpg" class="img-fluid align-self-center py-5"
           alt="Headshot of Sam Rogers edited with neon colors.">
       </div>
 
-      <div class="col-12 col-md-6 align-self-center py-2">
-        <h2 class="header-2 pb-4">
-          I’m Sam and I'm a graphic designer.
+      <div class="col-12 col-md-6 align-self-center py-2 ps-5">
+        <h2 class="header-2-fun pb-4">
+          I’m <span class="header-2-fun-pink">Sam</span> and I'm a graphic designer.
         </h2>
         <p class="body-1">
           I recently graduated from Cal Poly in San Luis Obispo and I'm looking to move to
@@ -142,7 +140,8 @@
       <div class="col-12 col-md-5 py-3">
 
         <h4 class="header-4 pb-2">
-          Co-Founder and CMO, Grove
+          Co-Founder and CMO, <a class="header-4-link" href="https://joingrove.com/"
+            target="_blank">Grove</a>
         </h4>
         <p class="body-2">
           February 2020—June 2021
@@ -161,7 +160,8 @@
       <div class="col-12 col-md-5 py-3">
 
         <h4 class="header-4 pb-2">
-          Creative Director, Cal Poly Racing
+          Creative Director, <a class="header-4-link"
+            href="https://www.calpolyracing.org/" target="_blank">Cal Poly Racing</a>
         </h4>
         <p class="body-2">
           February 2019—June 2020
@@ -181,7 +181,8 @@
       <div class="col-12 col-md-5 py-3">
 
         <h4 class="header-4 pb-2">
-          Freelance Graphic Design Intern, Five Acres Agency
+          Freelance Graphic Design Intern, <a class="header-4-link"
+            href="https://www.fiveacresagency.com/" target="_blank">Five Acres Agency</a>
         </h4>
         <p class="body-2">
           June 2019—October 2019
@@ -199,7 +200,8 @@
       <div class="col-12 col-md-5 py-3">
 
         <h4 class="header-4 pb-2">
-          Graphic Design Intern, XVELA
+          Graphic Design Intern, <a class="header-4-link" href="https://www.xvela.com/"
+            target="_blank">XVELA</a>
         </h4>
         <p class="body-2">
           June 2018—September 2018
@@ -218,7 +220,8 @@
       <div class="col-12 col-md-5 py-3">
 
         <h4 class="header-4 pb-2">
-          Graphic Design Lead, Cal Poly Racing
+          Graphic Design Lead, <a class="header-4-link"
+            href="https://www.calpolyracing.org/" target="_blank">Cal Poly Racing</a>
         </h4>
         <p class="body-2">
           February 2018—February 2019
@@ -236,7 +239,8 @@
       <div class="col-12 col-md-5 py-3">
 
         <h4 class="header-4 pb-2">
-          Marketing Intern, Switchmate Home
+          Marketing Intern, <a class="header-4-link"
+            href="https://www.mysimplysmarthome.com/" target="_blank">Switchmate Home</a>
         </h4>
         <p class="body-2">
           August 2017—September 2017
@@ -249,7 +253,7 @@
 
     </div>
 
-    <a href="Images/resume_10.1.pdf" class="btn btn-primary mt-2 mb-5">Download My
+    <a href="Images/resume_11.0.pdf" class="btn btn-primary mt-2 mb-5">Download My
       Resume</a>
 
     <div class="border-top py-5 mt-3" color="#ffffff">
