--- a/calpolyracing.html
+++ b/calpolyracing.html
@@ -19,8 +19,6 @@
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="https://use.typekit.net/nhd0gnx.css">
-
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500"
     rel="stylesheet">
 
@@ -36,11 +34,11 @@
   <nav class="navbar navbar-expand navbar-light bg-dark pt-4 sticky-top mx-auto px-3"
     style="max-width: 1000px;">
     <a class="navbar-brand d-none d-sm-block" href="index.html">
-      <img src="Images/website_2021_logo.png" alt="Sam Rogers" height="40">
+      <img src="Images/website_2021_logo_2.0.png" alt="Sam Rogers" height="40">
     </a>
 
     <a class="navbar-brand d-sm-none" href="index.html">
-      <img src="Images/website_2021_logo_small.png" alt="S.R." height="40">
+      <img src="Images/website_2021_logo_small_2.0.png" alt="S.R." height="40">
     </a>
 
     <div style="flex:1;">
@@ -65,7 +63,7 @@
     <img src="Images/racing_heroImage.png" class="img-fluid py-5"
       alt="A laptop screen displaying the the Formula SAE page of the Cal Poly Racing website.">
 
-    <h1 class="header-1 pb-3">
+    <h1 class="header-1">
       Cal Poly Racing
     </h1>
 
@@ -107,8 +105,13 @@
         Website
       </h2>
       <p class="body-1">
-        I worked with a team of 3 other designers—Spencer White, Alina Chiu, and Runar
-        Schmidt—to create Cal Poly Racing's new website. As Creative Director, I handled
+        I worked with a team of 3 other designers—<a class="link"
+          href="https://spencerwhitedesign.myportfolio.com/" target="_blank">Spencer
+          White</a>, <a class="link" href="https://www.alinachiu.com/"
+          target="_blank">Alina Chiu</a>, and <a class="link"
+          href="https://runarix.wixsite.com/runarschmidtdesign" target="_blank">Runar
+          Schmidt</a>—to create Cal Poly Racing's new website. As Creative Director, I
+        handled
         establishing a branded UI, building the website, and collaborating with the
         engineering teams to write copy.
       </p>
