--- a/xvela.html
+++ b/xvela.html
@@ -19,8 +19,6 @@
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="https://use.typekit.net/nhd0gnx.css">
-
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500"
     rel="stylesheet">
 
@@ -36,11 +34,11 @@
   <nav class="navbar navbar-expand navbar-light bg-dark pt-4 sticky-top mx-auto px-3"
     style="max-width: 1000px;">
     <a class="navbar-brand d-none d-sm-block" href="index.html">
-      <img src="Images/website_2021_logo.png" alt="Sam Rogers" height="40">
+      <img src="Images/website_2021_logo_2.0.png" alt="Sam Rogers" height="40">
     </a>
 
     <a class="navbar-brand d-sm-none" href="index.html">
-      <img src="Images/website_2021_logo_small.png" alt="S.R." height="40">
+      <img src="Images/website_2021_logo_small_2.0.png" alt="S.R." height="40">
     </a>
 
     <div style="flex:1;">
@@ -65,7 +63,7 @@
     <img src="Images/xvela_heroImage.png" class="img-fluid py-5"
       alt="Three rows of XVELA white icons connected by lines. The icon of a ship is highlighted in orange.">
 
-    <h1 class="header-1 pb-3">
+    <h1 class="header-1">
       XVELA Icon Library
     </h1>
 
