--- a/dew.html
+++ b/dew.html
@@ -19,8 +19,6 @@
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="https://use.typekit.net/nhd0gnx.css">
-
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500"
     rel="stylesheet">
 
@@ -36,11 +34,11 @@
   <nav class="navbar navbar-expand navbar-light bg-dark pt-4 sticky-top mx-auto px-3"
     style="max-width: 1000px;">
     <a class="navbar-brand d-none d-sm-block" href="index.html">
-      <img src="Images/website_2021_logo.png" alt="Sam Rogers" height="40">
+      <img src="Images/website_2021_logo_2.0.png" alt="Sam Rogers" height="40">
     </a>
 
     <a class="navbar-brand d-sm-none" href="index.html">
-      <img src="Images/website_2021_logo_small.png" alt="S.R." height="40">
+      <img src="Images/website_2021_logo_small_2.0.png" alt="S.R." height="40">
     </a>
 
     <div style="flex:1;">
@@ -65,7 +63,7 @@
     <img src="Images/dew_heroImage.png" class="img-fluid py-5"
       alt="Two business cards. The front of the card shows the Dew logo and the back of the card features a vine pattern along with the name, job, and email address of the restaurant owner and the website, phone number, and address of the restaurant.">
 
-    <h1 class="header-1 pb-3">
+    <h1 class="header-1">
       Dew
     </h1>
 
@@ -133,12 +131,12 @@
     </div>
 
 
-    <img src="Images/dew_standardsManual.png" class="img-fluid py-5"
+    <img src="Images/dew_standardsManual.png" class="img-fluid"
       alt="Three page spreads from the Dew brand standards manual: a spread outlining clear space for the logo, a section title spread with a vine pattern and the title "
       identity system", and a spread depicting Dew's primary color palette of grass green,
       chartreuse, sea foam blue, and pastel blue.">
 
-    <img src="Images/dew_fliers.png" class="img-fluid py-5"
+    <img src="Images/dew_fliers.png" class="img-fluid"
       alt="Two fliers for events at Dew. The first is for a featured artist, which shows a photo of a woman sitting on the floor of a gallery underneath the artist's name, a description of their work, and the dates their work will be shown at Dew. The second flier is for a wine tasting, which shows the date and time of the event, a short description of the event underneath a photo of wine glasses.">
 
     <img src="Images/dew_menuMockup.png" class="img-fluid py-5"
