--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="https://use.typekit.net/nhd0gnx.css">
-
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500"
     rel="stylesheet">
 
@@ -37,11 +35,11 @@
   <nav class="navbar navbar-expand navbar-light bg-dark pt-4 sticky-top mx-auto px-3"
     style="max-width: 1000px;">
     <a class="navbar-brand d-none d-sm-block" href="index.html">
-      <img src="Images/website_2021_logo.png" alt="Sam Rogers" height="40">
+      <img src="Images/website_2021_logo_2.0.png" alt="Sam Rogers" height="40">
     </a>
 
     <a class="navbar-brand d-sm-none" href="index.html">
-      <img src="Images/website_2021_logo_small.png" alt="S.R." height="40">
+      <img src="Images/website_2021_logo_small_2.0.png" alt="S.R." height="40">
     </a>
 
     <div style="flex:1;">
@@ -63,7 +61,12 @@
 
   <div class="mx-auto px-3" style="max-width: 1000px;">
 
-    <div class="row py-5">
+    <h1 class="header-1 pt-5 text-center">
+      <span class="header-1-white">If you need a </span>designer<span
+        class="header-1-white">, you’ve come to the right place.</span>
+    </h1>
+
+    <div class="row pb-5 pt-3">
 
       <div class="col-12 col-sm-6 py-5">
         <a href="grove.html" class="text-center" style="text-decoration: none">
