--- a/loop.html
+++ b/loop.html
@@ -19,8 +19,6 @@
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="https://use.typekit.net/nhd0gnx.css">
-
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500"
     rel="stylesheet">
 
@@ -36,11 +34,11 @@
   <nav class="navbar navbar-expand navbar-light bg-dark pt-4 sticky-top mx-auto px-3"
     style="max-width: 1000px;">
     <a class="navbar-brand d-none d-sm-block" href="index.html">
-      <img src="Images/website_2021_logo.png" alt="Sam Rogers" height="40">
+      <img src="Images/website_2021_logo_2.0.png" alt="Sam Rogers" height="40">
     </a>
 
     <a class="navbar-brand d-sm-none" href="index.html">
-      <img src="Images/website_2021_logo_small.png" alt="S.R." height="40">
+      <img src="Images/website_2021_logo_small_2.0.png" alt="S.R." height="40">
     </a>
 
     <div style="flex:1;">
@@ -65,7 +63,7 @@
     <img src="Images/loop_heroImage.png" class="img-fluid py-5"
       alt="Five iPhone screens showing different pages of the Loop app: a list of daily tasks, an events page, a single task page, a user profile, and a community challenge page.">
 
-    <h1 class="header-1 pb-3">
+    <h1 class="header-1">
       Loop
     </h1>
 
@@ -86,8 +84,13 @@
 
       <div class="col-12 col-sm-5 py-3">
         <p class="body-1">
-          I worked on Loop with Amber Chiang, Sasha Menshikova, Cody Capella, and Tyler
-          Rathod
+          I worked on Loop with <a class="link" href="https://www.amberchiang.xyz/"
+            target="_blank">Amber Chiang</a>, <a class="link"
+            href="https://sashamenshikova.com/" target="_blank">Sasha Menshikova</a>,
+          <a class="link" href="https://www.codycapella.com/" target="_blank">Cody
+            Capella</a>, and <a class="link" href="http://tylerrr.design/"
+            target="_blank">Tyler
+            Rathod</a>
           as part of Adobe’s IBM iX Creative Jam in September 2019.
         </p>
         <p class="body-1">
